--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- <img class="background-image" src="../src/assets/FadedDragon.png" /> -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
